--- a/Proyecto1/src/Interface/Main.form
+++ b/Proyecto1/src/Interface/Main.form
@@ -54,6 +54,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Mostrar Grafo"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnShowGraphActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="240" y="120" width="130" height="-1"/>
