--- a/Proyecto1/src/Interface/Main.form
+++ b/Proyecto1/src/Interface/Main.form
@@ -122,6 +122,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Actualizar datos"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="140" y="220" width="-1" height="-1"/>
